@@ -36,4 +36,18 @@
         <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <argLine>
+              --add-opens org.graalvm.truffle/com.oracle.truffle.polyglot=org.graalvm.python.embedding
+            </argLine>
+          </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
